src/test-c/test_fail/error/not_main.c
int pas_main(){
    return 0;
}